--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "typescript": "3.9.7"
+  },
+  "devDependencies": {
+    "@types/react": "16.9.43"
   }
 }
