--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "2.16.1",
+    "graphql": "15.3.0",
+    "micro": "9.3.4",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
