--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "3.1.1",
     "apollo-server-micro": "2.16.1",
     "graphql": "15.3.0",
     "micro": "9.3.4",
